syntax = "proto3";

package proto;

option go_package = "{{.ProjectName}}/proto";

// UserService 用户服务
service User {
  // GetUser 获取用户信息
  rpc GetUser(GetUserRequest) returns (GetUserResponse);

  // CreateUser 创建用户
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);

  // UpdateUser 更新用户
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
}

// GetUserRequest 获取用户请求
message GetUserRequest {
  int64 id = 1;  // 用户ID
}

// GetUserResponse 获取用户响应
message GetUserResponse {
  int64 id = 1;           // 用户ID
  string name = 2;        // 用户名
  string email = 3;       // 邮箱
  int32 status = 4;       // 状态
  int64 created_at = 5;   // 创建时间
}

// CreateUserRequest 创建用户请求
message CreateUserRequest {
  string name = 1;   // 用户名
  string email = 2;  // 邮箱
}

// CreateUserResponse 创建用户响应
message CreateUserResponse {
  int64 id = 1;         // 用户ID
  string message = 2;   // 消息
}

// UpdateUserRequest 更新用户请求
message UpdateUserRequest {
  int64 id = 1;      // 用户ID
  string name = 2;   // 用户名（可选）
  string email = 3;  // 邮箱（可选）
  int32 status = 4;  // 状态（可选）
}

// UpdateUserResponse 更新用户响应
message UpdateUserResponse {
  bool success = 1;   // 是否成功
  string message = 2; // 消息
}
